minor changings for adaptive layout

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     <body>
         <div class="second__block">
             <div class="container">
-                <div class="second__block-top">
+                <div class="flex">
                     <div class="slider__text">
                         <a href="#" class="small__title">Featured</a>
                         <a href="#" class="small__title-faded">New</a>
@@ -120,23 +120,19 @@
         </div>
         <div class="fourth__block">
             <div class="container">
-                <div class="second__block-top">
+                <div class="flex">
                     <div class="slider__text">
                         <h3 class="trending__title">Trending Products</h3>
                     </div>
                     <a href="#" class="right__btn">explore all</a>
                 </div>
                 <div class="fourth__block-content">
-                    <div class="line">
                         <a href="#"><img class="boxes_1" src="img/product-11.jpg" alt=""></a>
                         <a href="#"><img class="boxes_1" src="img/product-21.jpg" alt=""></a>
                         <a href="#"><img class="boxes_1" src="img/product-31.jpg" alt=""></a>
-                    </div>
-                    <div class="line">
                         <a href="#"><img class="boxes_1" src="img/product-41.jpg" alt=""></a>
                         <a href="#"><img class="boxes_1" src="img/product-5.jpg" alt=""></a>
                         <a href="#"><img class="boxes_1" src="img/product-6.jpg" alt=""></a>
-                    </div>
                 </div>
             </div>
         </div>
