--- a/contact.html
+++ b/contact.html
@@ -31,7 +31,7 @@
               </div>
               <ul class="menu">
                 <li class="menu__list">
-                  <a class="menu__link-active" href="index.html">HOME</a>
+                  <a class="menu__link" href="index.html">HOME</a>
                 </li>
                 <li class="menu__list">
                   <a class="menu__link" href="products.html">PRODUCTS</a>
@@ -43,7 +43,7 @@
                   <a class="menu__link" href="showroom.html">SHOWROOM</a>
                 </li>
                 <li class="menu__list">
-                  <a class="menu__link" href="contact.html">CONTACT</a>
+                  <a class="menu__link-active" href="contact.html">CONTACT</a>
                 </li>
               </ul>
             </div>
