--- a/contact.html
+++ b/contact.html
@@ -34,7 +34,7 @@
                   <a class="menu__link" href="index.html">HOME</a>
                 </li>
                 <li class="menu__list">
-                  <a class="menu__link" href="products.html">PRODUCTS</a>
+                  <a class="menu__link" href="item.html">PRODUCTS</a>
                 </li>
                 <li class="menu__list">
                   <a class="menu__link" href="history.html">HISTORY</a>
@@ -42,7 +42,7 @@
                 <li class="menu__list">
                   <a class="menu__link" href="showroom.html">SHOWROOM</a>
                 </li>
-                <li class="menu__list">
+                <li class="menu__list magnifier">
                   <a class="menu__link-active" href="contact.html">CONTACT</a>
                 </li>
               </ul>
