--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                                     <a class="menu__link-active" href="index.html">HOME</a>
                                 </li>
                                 <li class="menu__list">
-                                    <a class="menu__link" href="products.html">PRODUCTS</a>
+                                    <a class="menu__link" href="item.html">PRODUCTS</a>
                                 </li>
                                 <li class="menu__list">
                                     <a class="menu__link" href="history.html">HISTORY</a>
@@ -38,7 +38,7 @@
                                 <li class="menu__list">
                                     <a class="menu__link" href="showroom.html">SHOWROOM</a>
                                 </li>
-                                <li class="menu__list ">
+                                <li class="menu__list magnifier">
                                     <a class="menu__link" href="contact.html">CONTACT</a>
                                 </li>
                             </ul>
@@ -157,7 +157,7 @@
         </div>
         <div class="sixth__block">
             <div class="container">
-                <div class="collapse">
+                <div class="remove__paddings">
                     <div class="first__child">
                         <div class="pillow__text">
                             <p class="color__text blue">exclusive</p>
@@ -172,7 +172,7 @@
                     </div>
                     <div class="first__child">
                         <div class="pillow__size">
-                            <div class="collapse">
+                            <div class="remove__paddings">
                                 <div class="second__child">
                                     <a href="#"><img class="boxes" src="img/product-2-sm.jpg" alt=""></a>
                                 </div>
